fixes to readme.md, css reorder, modal visibility fix

--- a/_sass/partials/_utilities.scss
+++ b/_sass/partials/_utilities.scss
@@ -11,3 +11,13 @@
 .show-opacity {
   opacity: 1;
 }
+
+::-moz-selection { /* Code for Firefox */
+  color: #ffffff;
+  background: #5770d6;
+}
+
+::selection {
+  color: #ffffff; 
+  background: #5770d6;
+}
